Edited css page for better design

--- a/HW1/index.html
+++ b/HW1/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <title>Coffee Cottage</title>
         <meta charset="utf-8">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="stylesheet.css"
-        <title>Coffee Cottage</title>
     </head>
         <body>
           <div class="nav">
-                <a class="active" href="#home">Home</a>
+                <a class="active" href="index.html">Home</a>
                 <a href="page2.html">Page 2</a>
                 <a href="#contact">Contact</a>
                 <a href="#about">About</a>
