--- a/HW1/page2.html
+++ b/HW1/page2.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html>
     <head>
+            <title>Coffee Cottage</title>
             <meta charset="utf-8">
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
             <link rel="stylesheet" type="text/css" href="stylesheet.css"
-            <title>Coffee Cottage</title>
     </head>
 
     <body>
+            <div class="nav">
+                    <a href="index.html">Home</a>
+                    <a class="active" href="page2.html">Page 2</a>
+                    <a href="#contact">Contact</a>
+                    <a href="#about">About</a>
+                </div>
         <h2>
             The following are a list of cool coffees:
         </h2>
