Added another page && edited design

--- a/HW1/index.html
+++ b/HW1/index.html
@@ -9,33 +9,13 @@
         <body>
           <div class="nav">
                 <a class="active" href="index.html">Home</a>
-                <a href="page2.html">Page 2</a>
-                <a href="#contact">Contact</a>
-                <a href="#about">About</a>
+                <a href="page2.html">My Opinions</a>
+                <a href="page3.html">Caffeine Content</a>
             </div>
             <h1>Coffee Cottage</h1>
-            <h2>About This Page</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Libero ducimus voluptate natus sapiente consequatur, perspiciatis animi facere nostrum obcaecati hic facilis amet sunt, corporis cum rem eum quibusdam cupiditate beatae?</p>
-
-            <div class="jumbotron">
-                <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Recusandae voluptas ducimus numquam cupiditate quod! Eveniet similique accusantium voluptatem nesciunt rem, saepe enim delectus quaerat reiciendis suscipit animi ab sequi dolorum!</p>
-            </div>
-
-            <div class="container">
-                    <div class="row">
-                      <div class="col-sm-4">
-                        <h3>Column 1</h3>
-                        <p>Lorem ipsum dolor..</p>
-                      </div>
-                      <div class="col-sm-4">
-                        <h3>Column 2</h3>
-                        <p>Lorem ipsum dolor..</p>
-                      </div>
-                      <div class="col-sm-4">
-                        <h3>Column 3</h3>
-                        <p>Lorem ipsum dolor..</p>
-                      </div>
-                    </div>
+            <h2>Welcome to my Website!</h2>
+            <p>You're probably wondering what this website is about. Well, I am here to tell you that this website is based on both facts, and my own personal opinions about coffee! <br> Feel free to browse through the navigation bar above. <br> The <b> My Opinions </b> section provides information about my favorite and least favorite types of coffees. <br> The <b> Caffeine Content </b> section provides different types of coffees and their respective caffeine contents. </b></p>
+            <img src="coffeePic.png" alt="Coffee Pic" class="center">
 
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
             <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
