--- a/HW1/page2.html
+++ b/HW1/page2.html
@@ -10,12 +10,12 @@
     <body>
             <div class="nav">
                     <a href="index.html">Home</a>
-                    <a class="active" href="page2.html">Page 2</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#about">About</a>
+                    <a class="active" href="page2.html">My Opinions</a>
+                    <a href="page3.html">Caffeine Content</a>
                 </div>
+                <h1>Coffee Cottage</h1>
         <h2>
-            The following are a list of cool coffees:
+            The following is an ordered list of my rankings of coffee brewing methods:
         </h2>
         <ol>
                 <li>French Press</li>
@@ -23,15 +23,19 @@
                 <li>Drip Coffee</li>
                 <li>Instant Coffee</li>
         </ol>
+        <h2> Rating Explanations: </h2>
         <dl>
                 <dt>French Press</dt>
-                <dd>- Description here of this lovely best drink</dd>
+                <dd>- I believe this to be the best coffee brewing method because of the level of strength this type of coffee contains. Depending on how long you let your coffee grounds soak in the hot water, you could get a super strong cup of coffee (my favorite). Additionally, the natural oils from the coffee grounds are always present when you make coffee using a french press, which adds flavor that you wouldn't get with any other type of coffee, along with some nutritional benefits.</dd>
                 <dt>Espresso Machine</dt>
-                <dd>- Description numero dos</dd>
+                <dd>- This is my second favorite type of coffee. Again, this is because of strength. You can get a lot more flavor with a lot less coffee grounds from an espresso machine (vs other coffee brewing methods). Espresso machines provide a very quick way to get coffee as well, and most other coffee brewing methods take longer than an espresso machine. You can add boiling water to make an americano if you don't want a straight, strong shot of espresso, which is what I typically do.</dd>
                 <dt>Drip Coffee</dt>
-                <dd>- Description numero three</dd>
+                <dd>- This used to be my favorite, before I learned about the french press and espresso machine. You can make a good, strong cup of coffee, or a weak cup, however to your liking, which is what I love from a drip coffee machine. However, this takes a while to brew, and sometimes your coffee can have a sour taste.</dd>
                 <dt>Instant Coffee</dt>
-                <dd>- Description numero four</dd>
+                <dd>- No description is necessary here, instant coffee is just foul. </dd>
               </dl>
+            <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+            <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </body>
 </html>
