Finished editing (think I'm done, might go back if needed). Added pics to column area in page3 and edited css file.

--- a/HW1/page3.html
+++ b/HW1/page3.html
@@ -17,47 +17,63 @@
                         <br/> <br/> 
                         <thead>
                           <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">First</th>
-                            <th scope="col">Last</th>
-                            <th scope="col">Handle</th>
+                            <th scope="col"></th>
+                            <th scope="col">Coffee</th>
+                            <th scope="col">Caffeine Content</th>
+                            <th scope="col">Amount</th>
                           </tr>
                         </thead>
                         <tbody>
                           <tr>
-                            <th scope="row">1</th>
-                            <td>Mark</td>
-                            <td>Otto</td>
-                            <td>@mdo</td>
+                            <th scope="row"></th>
+                            <td>French Press</td>
+                            <td>107.5 Milligrams</td>
+                            <td>8 Ounces</td>
                           </tr>
                           <tr>
-                            <th scope="row">2</th>
-                            <td>Jacob</td>
-                            <td>Thornton</td>
-                            <td>@fat</td>
+                            <th scope="row"></th>
+                            <td>Espresso Machine</td>
+                            <td>80 Milligrams</td>
+                            <td>2 Ounces</td>
                           </tr>
                           <tr>
-                            <th scope="row">3</th>
-                            <td colspan="2">Larry the Bird</td>
-                            <td>@twitter</td>
+                            <th scope="row"></th>
+                            <td>Drip Coffee</td>
+                            <td>120 Milligrams</td>
+                            <td>12 Ounces</td>
                           </tr>
+                          <tr>
+                            <th scope="row"></th>
+                            <td>Instant Coffee</td>
+                            <td>47 Milligrams</td>
+                            <td>6 Ounces</td>
+                              </tr>
                         </tbody>
                       </table>
 
                       <div class="container">
                             <div class="row">
-                              <div class="col-sm-4">
-                                <h3>Column 1</h3>
-                                <p>Lorem ipsum dolor..</p>
+                              <div class="col-sm-3">
+                                <h3>French Press</h3>
+                                <img src="french.jpg" alt="French Pic" width="128" height="128">
+                                <p>If you let it sit for a long time, you'll have a good, strong cup of coffee. </p>
                               </div>
-                              <div class="col-sm-4">
-                                <h3>Column 2</h3>
-                                <p>Lorem ipsum dolor..</p>
+                              <div class="col-sm-3">
+                                <h3>Espresso Machine</h3>
+                                <img src="espresso.jpg" alt="Espresso Pic" width="128" height="128">
+                                <p>For a strong pick-me-up, try an espresso shot. </p>
                               </div>
-                              <div class="col-sm-4">
-                                <h3>Column 3</h3>
-                                <p>Lorem ipsum dolor..</p>
+                              <div class="col-sm-3">
+                                <h3>Drip Coffee</h3>
+                                <img src="drip.jpg" alt="Drip Pic" width="128" height="128">
+                                <p>You can brew a pretty good cup of coffee with this type of coffee brewing method. </p>
                               </div>
+                              <div class="col-sm-3">
+                                    <h3>Instant Coffee</h3>
+                                    <img src="instant.jpg" alt="Instant Pic" width="128" height="128">
+                                    <p>Personally, my least favorite type of coffee, but if you want something quick and have no other options, this is something. </p>
+                                </div>
+                            </div>
                             </div>
         
             <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
